TestSuite/errors/err0189.pas
uses System.IO, System.Runtime.Serialization;

begin
var sc : StreamingContext;
var di := new DriveInfo(nil,sc);  
end.